--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
 
         <div class="research-project">
           <h3>Cosmology & Early Universe</h3>
-          <p>My PhD work focused on axion-SU(2) gauge field dynamics during inflation, exploring how primordial fields generate observable signatures in the cosmic microwave background and gravitational wave spectrum.</p>
+          <p>My PhD work focused on small field models of inflation that yield high gravitational wave signals, demonstrating the breakdown of analytic approximations for these models. Later, at the Max Planck Institute for Astrophysics, I studied spectator axion-SU(2) field dynamics during inflation, exploring the validity of the isotropic attractor solution and its observable signatures in the primordial power spectrum.</p>
         </div>
 
       </article>
