--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
 
         <h2>Background</h2>
 
-        <p>Before academia, I served as a naval officer in the IDF. I hold a PhD in Physics (cosmology) from Ben-Gurion University, with postdoctoral work at the Max Planck Institute for Astrophysics and SISSA.</p>
-
-        <p>I practice Guang Ping Yang tai chi and Sha style Kung fu. I'm married to <a href="https://ybz.org.il/">Dr. Netta Schramm</a>, a physicist and scholar who serves as Vice Director at Yad Ben Zvi research institute.</p>
+        <p>I hold a PhD in Physics (cosmology) from Ben-Gurion University, with postdoctoral work at the Max Planck Institute for Astrophysics and SISSA.</p>
 
         <p style="margin-top: 2rem;">
           <a href="contact.html" class="btn">Get in touch</a>
