--- a/research.html
+++ b/research.html
@@ -21,7 +21,7 @@
           <li><a href="research.html" class="active">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="teaching.html">Teaching</a></li>
-          <li><a href="sunburst.html">SunBURST</a></li>
+          
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -37,7 +37,7 @@
         <div class="research-project">
           <h3>SunBURST: GPU-Accelerated Bayesian Evidence</h3>
           <p>Bayesian model comparison requires computing intractable high-dimensional integrals. SunBURST exploits GPU parallelism to achieve O(d<sup>0.67</sup>) scaling through 512+ dimensions—enabling model selection problems previously considered computationally impossible.</p>
-          <p><a href="sunburst.html">Learn more →</a></p>
+          <p><em>Paper in preparation.</em></p>
         </div>
 
         <div class="research-project">
