--- a/research.html
+++ b/research.html
@@ -34,11 +34,11 @@
           <h1>Research</h1>
         </header>
 
-        <div class="research-project">
+        <!--<div class="research-project">
           <h3>SunBURST: GPU-Accelerated Bayesian Evidence</h3>
           <p>Bayesian model comparison requires computing intractable high-dimensional integrals. SunBURST exploits GPU parallelism to achieve O(d<sup>0.67</sup>) scaling through 512+ dimensions—enabling model selection problems previously considered computationally impossible.</p>
           <p><em>Paper in preparation.</em></p>
-        </div>
+        </div>-->
 
         <div class="research-project">
           <h3>Bayesian Epistemology & Media Polarization</h3>
