--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="teaching.html">Teaching</a></li>
-          
+          <li><a href="sunburst.html">SunBURST</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
