--- a/research.html
+++ b/research.html
@@ -21,7 +21,8 @@
           <li><a href="research.html" class="active">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="teaching.html">Teaching</a></li>
-          
+          <li><a href="sunburst.html">SunBURST</a></li>
+
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
