--- a/sunburst.html
+++ b/sunburst.html
@@ -106,7 +106,7 @@ result = compute_evidence(log_likelihood, bounds)
         </p>
 
         <pre style="background: #1f2937; color: #f9fafb; padding: 1.5rem; border-radius: 8px; overflow-x: auto; font-family: 'JetBrains Mono', monospace; font-size: 0.85rem; line-height: 1.6;"><code>git clone https://github.com/beastraban/sunburst.git
-cd sunburst
+cd sunburst/sunburst_super_gui
 pip install streamlit
 streamlit run app.py</code></pre>
 
