--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
         <a href="index.html" class="site-title">Ira Wolfson</a>
         <ul class="nav-links">
           <li><a href="index.html" class="active">About</a></li>
-          <li><a href="research.html">Research</a></li>
+          <li class="nav-dropdown">
+            <a href="research.html">Research</a>
+            <ul class="dropdown-menu">
+              <li><a href="research-physics.html">Physics</a></li>
+              <li><a href="research-philosophy.html">Philosophy</a></li>
+              <li><a href="research-computation.html">Scientific Computation</a></li>
+              <li><a href="research-misc.html">Misc.</a></li>
+            </ul>
+          </li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="teaching.html">Teaching</a></li>
           <li><a href="sunburst.html">SunBURST</a></li>
