--- a/research-misc.html
+++ b/research-misc.html
@@ -50,6 +50,7 @@
           <p>Develops ethical principles for consciousness research on AI systems using Talmudic legal reasoning. Addresses the moral paradox of investigating consciousness in entities whose moral status depends on the investigation's outcome. Proposes the "Suffering Toasters" methodology — sensory deprivation tests rather than capability assessments for detecting machine consciousness — focusing on what matters morally.</p>
           <div class="publication-links">
             <a href="https://doi.org/10.1007/s43681-025-00852-z">DOI</a>
+            <a href="https://philpapers.org/rec/WOLICF">PhilPapers</a>
             <!--<a href="assets/Papers/ai-consciousness.pdf">Local PDF</a>-->
           </div>
         </div>
