--- a/research-philosophy.html
+++ b/research-philosophy.html
@@ -45,24 +45,20 @@
         <h2>Bayesian Epistemology</h2>
 
         <div class="publication">
-          <div class="publication-title">Bayesian Epistemology</div>
+          <div class="publication-title">Knowledge and Morality Without Certainty: A Bayesian Framework</div>
           <div class="publication-meta">I. Wolfson — Under review at Episteme</div>
           <p>Argues that Bayesian frameworks dissolve rather than solve traditional philosophical problems, including Gettier cases and Hume's problem of induction. A systematic application of probabilistic reasoning to longstanding epistemological debates.</p>
           <div class="publication-links">
-            <!--<a href="">PhilArchive</a>-->
-            <!--<a href="assets/Papers/bayesian-epistemology.pdf">Local PDF</a>-->
-            <em>Preprint coming soon</em>
+            <a href="https://philpapers.org/rec/WOLKAM">PhilPapers</a>
           </div>
         </div>
 
         <div class="publication">
-          <div class="publication-title">Rational Polarization</div>
+          <div class="publication-title">Rational Polarization: Why the Literature Solved the Wrong Problem</div>
           <div class="publication-meta">I. Wolfson — Under review at Social Epistemology</div>
           <p>Demonstrates how rational Bayesian agents can arrive at polarized beliefs when exposed to the same evidence under different priors, and examines the institutional conditions under which such polarization intensifies.</p>
           <div class="publication-links">
-            <!--<a href="">PhilArchive</a>-->
-            <!--<a href="assets/Papers/rational-polarization.pdf">Local PDF</a>-->
-            <em>Preprint coming soon</em>
+            <a href="https://philpapers.org/rec/WOLRPT">PhilPapers</a>
           </div>
         </div>
 
@@ -71,8 +67,6 @@
           <div class="publication-meta">I. Wolfson — In preparation</div>
           <p>Argues that media volume manipulation can overwhelm rational Bayesian discounting even for ideal agents, shifting moral responsibility from individuals to institutions that control information flow. Connects to the planned Bayesian Epistemological media think-group initiative.</p>
           <div class="publication-links">
-            <!--<a href="">PhilArchive</a>-->
-            <!--<a href="assets/Papers/media-polarization.pdf">Local PDF</a>-->
             <em>In preparation</em>
           </div>
         </div>
@@ -80,12 +74,11 @@
         <h2>Philosophy of Science</h2>
 
         <div class="publication">
-          <div class="publication-title">Updateability as Demarcation</div>
+          <div class="publication-title">Updateability as Demarcation: A Bayesian Synthesis</div>
           <div class="publication-meta">I. Wolfson — Under review at European Journal for Philosophy of Science</div>
           <p>Proposes updateability — the capacity of a theory to be meaningfully revised in light of new evidence — as a criterion for demarcating science from non-science, offering an alternative to falsifiability.</p>
           <div class="publication-links">
-            <!--<a href="">PhilArchive</a>-->
-            <!--<a href="assets/Papers/updateability.pdf">Local PDF</a>-->
+            <!--<a href="">PhilPapers</a>-->
             <em>Preprint coming soon</em>
           </div>
         </div>
@@ -93,13 +86,11 @@
         <h2>Applied Ethics</h2>
 
         <div class="publication">
-          <div class="publication-title">Abortion Ethics</div>
+          <div class="publication-title">Abortion Ethics: A Bayesian Framework for Graduated Moral Status</div>
           <div class="publication-meta">I. Wolfson — Under review at Journal of Bioethical Inquiry</div>
-          <p>A philosophical analysis applying rigorous ethical reasoning to the abortion debate.</p>
+          <p>Applies graduated Bayesian credences about moral status to generate graduated protections, offering a framework that dissolves the binary framing of the abortion debate.</p>
           <div class="publication-links">
-            <!--<a href="">PhilArchive</a>-->
-            <!--<a href="assets/Papers/abortion-ethics.pdf">Local PDF</a>-->
-            <em>Preprint coming soon</em>
+            <a href="https://philpapers.org/rec/WOLAEA-5">PhilPapers</a>
           </div>
         </div>
 
