--- a/research-philosophy.html
+++ b/research-philosophy.html
@@ -56,18 +56,9 @@
         <div class="publication">
           <div class="publication-title">Rational Polarization: Why the Literature Solved the Wrong Problem</div>
           <div class="publication-meta">I. Wolfson — Under review at Social Epistemology</div>
-          <p>Demonstrates how rational Bayesian agents can arrive at polarized beliefs when exposed to the same evidence under different priors, and examines the institutional conditions under which such polarization intensifies.</p>
+          <p>Argues that the Bayesian polarization literature asked the wrong question. "How can rational agents diverge given common evidence?" presupposes common evidence — but partisan media ecosystems violate this premise at scale. The convergence theorems fail not because of subtle cognitive mechanisms but because their central assumption is empirically false. Twenty years of cognitive interventions failed because they target the wrong failure mode.</p>
           <div class="publication-links">
             <a href="https://philpapers.org/rec/WOLRPT">PhilPapers</a>
-          </div>
-        </div>
-
-        <div class="publication">
-          <div class="publication-title">Bayesian Epistemology &amp; Media Polarization</div>
-          <div class="publication-meta">I. Wolfson — In preparation</div>
-          <p>Argues that media volume manipulation can overwhelm rational Bayesian discounting even for ideal agents, shifting moral responsibility from individuals to institutions that control information flow. Connects to the planned Bayesian Epistemological media think-group initiative.</p>
-          <div class="publication-links">
-            <em>In preparation</em>
           </div>
         </div>
 
