--- a/research-physics.html
+++ b/research-physics.html
@@ -49,12 +49,10 @@
           <div class="publication-meta">I. Wolfson — 2026</div>
           <p>Shows that the numerical prefactor 1/4 in the Bekenstein–Hawking entropy can be traced to the covariant phase-space structure of general relativity at a null boundary. Two geometric reductions — the null characteristic constraint and an exterior symplectic quotient — fix the effective symplectic rank density, yielding the prefactor as a geometric property of gravitational phase space rather than a model-dependent microscopic input.</p>
           <div class="publication-links">
-            <a href="assets/Papers/BH_entropy_geometric_prefactor.pdf">Local PDF</a>
+            <a href="assets/Papers/On_a_geometric_interpretation_of_the_1_4_factor_in_black_hole_entropy.pdf">Local PDF</a>
+            <a href="https://doi.org/10.5281/zenodo.18651765">DOI</a>
           </div>
-          <div class="paper-timestamp">
-            Uploaded: 2026-02-09 · SHA-256: <code>abd81a5138c0807171bacb0414041947d4c955dc1322b3761780b6f57d4ec51f</code>
-            <br><a href="verify.html">How to verify</a> · Git commit history serves as third-party timestamp.
-          </div>
+            
         </div>
 
         <div class="publication">
