--- a/research-physics.html
+++ b/research-physics.html
@@ -45,7 +45,7 @@
         <h2>Foundations &amp; Thermodynamics</h2>
 
         <div class="publication">
-          <div class="publication-title">Geometric Origin of the Bekenstein–Hawking Entropy Prefactor from Null-Boundary Phase Space</div>
+          <div class="publication-title">On a geometric interpretation of the 1/4 factor in black hole entropy</div>
           <div class="publication-meta">I. Wolfson — 2026</div>
           <p>Shows that the numerical prefactor 1/4 in the Bekenstein–Hawking entropy can be traced to the covariant phase-space structure of general relativity at a null boundary. Two geometric reductions — the null characteristic constraint and an exterior symplectic quotient — fix the effective symplectic rank density, yielding the prefactor as a geometric property of gravitational phase space rather than a model-dependent microscopic input.</p>
           <div class="publication-links">
